cmake_minimum_required( VERSION 3.6...3.15 )
if(${CMAKE_VERSION} VERSION_LESS 3.15)
    cmake_policy(VERSION ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION})
else()
    cmake_policy(VERSION 3.15)
endif()

if (NOT RELATIVE_TO_COMMON)
    set(RELATIVE_TO_COMMON /common/)
    list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}${RELATIVE_TO_COMMON}cmake)
endif ()

add_subdirectory(quest_dispatcher)
add_subdirectory(auth_dispatcher)
add_subdirectory(chat_dispatcher)
add_subdirectory(worldserver_dispatcher)
add_subdirectory(arena_dispatcher)
