add_subdirectory(common)
add_subdirectory(arena)
add_subdirectory(inventory)
add_subdirectory(quest)
add_subdirectory(worldserver)

if (BUILD_TESTING)
    find_package(FSeam REQUIRED)
    include(Catch REQUIRED)

    add_subdirectory(common/test)
    add_subdirectory(arena/test)
    add_subdirectory(inventory/test)
    add_subdirectory(worldserver/test)
endif ()
